fix overflow problem on mobile

--- a/CSS/Setup.scss
+++ b/CSS/Setup.scss
@@ -8,7 +8,9 @@
 html, body {
 	height: 100%;
 }
-
+.slider-wrapper {
+	overflow: hidden;
+}
 .stack-wrapper {
 	width: 100%;
 	height:100%;
